--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,9 @@
 {
-	"manifest_version": 3,
-	"name": "Hello Extensions",
-	"description": "Base Level Extension",
-	"version": "1.0",
-	"action": {
-		"default_popup": "hello.html",
-		"default_icon": "hello_extensions.png"
-	}
+  "manifest_version": 3,
+  "name": "Pomodoro - Navire",
+  "description": "Simple Pomodoro App",
+  "version": "1.0",
+  "action": {
+    "default_popup": "index.html"
+  }
 }
